--- a/A3/Assembly-CSharp.csproj
+++ b/A3/Assembly-CSharp.csproj
@@ -10,7 +10,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>SpaceShooter</RootNamespace>
+    <RootNamespace>PlanetaryEscape</RootNamespace>
     <ProjectGuid>{4C8C19FE-A815-F22E-00EA-48B5185D855D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
